FLUME-1661: ExecSource cannot execute complex *nix commands
(Roshan Naik via Brock Noland)